# platform.core.uifw.wayland-extension

./: .gitignore  COPYING  Makefile.am  configure.ac
packaging/: wayland-extension.spec
protocol/: input-method.xml  keyrouter.xml  text.xml  tizen-buffer-pool.xml  tizen-extension.xml  tizen-policy.xml  tizen-screenshooter.xml  tizen-surface.xml  transform.xml  xdg-shell.xml
src/: template-client.pc.in  template-server.pc.in  wayland-extension-version.h.in
